# python-setup-template

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
