[metadata]
name =
version = 1.0.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vunhatchuong123/
author = Ronny
author_email =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
profile = black

[coverage:run]
plugins = covdefaults
