[metadata]
name = python_setup_template
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vunhatchuong123/
author = Ronny
author_email = 

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
profile = black

[coverage:run]
plugins = covdefaults

[mypy]
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = True

[mypy-testing.*]
disallow_untyped_defs = False

[mypy-tests.*]
disallow_untyped_defs = False
